# parkinson-detector

./: .bandit  .coveragerc  .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: github_actions.yml
notebooks/: PD_detector_pipeline_w_Cassandra.html  PD_detector_pipeline_w_Cassandra.ipynb
src/: __init__.py  constants.py  get_src_dir.py
src/analyse_data/: __init__.py  analyse_speech_datasets.py  constants.py  visualise_multi_collinear_feats.py
src/create_cassandra_db/: __init__.py  constants.py  create_tables.py  utils.py
src/create_train_and_test_data/: __init__.py  merge_speech_data.py
src/data/Little_2008/: parkinsons_data_processed.csv
src/data/Little_2009/: parkinsons_updrs_processed.csv
src/data/Naranjo_et_al_2016/: ReplicatedAcousticFeatures-ParkinsonDatabase_processed.csv
src/data/Sakar_et_al_2013/: test_data.csv  test_data_processed.csv  train_data.csv  train_data_processed.csv
src/data/train_and_test_sets/: test_data.csv  train_data.csv
src/modelling/: __init__.py  constants.py
src/modelling/classify/: __init__.py  constants.py  gbt_classifier.py  infer.py
src/modelling/evaluate/: __init__.py  constants.py  explainability.py  inference_and_performance.py  visualise_performance.py
src/modelling/vector_similarity/: __init__.py  constants.py  knn_classifier.py
src/process_data/: __init__.py  balance_classes.py  constants.py  prepare_data.py  remove_outliers.py  utils.py
tests/: test_get_src_dir.py
tests/process_data/: test_balance_classes.py  test_prepare_data.py  test_remove_outliers.py  test_utils.py
(+2 files in other folders)
